# node-based-image-processor-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BlendNode.h  BlurNode.h  BrightnessContrastNode.h  ColorChannelSplitter.h  ConnectionItem.h  ConvolutionFilterNode.h  EdgeDetectionNode.h  ImageInputNode.h  MainWindow.h  Node.h  NodeGraph.h  NodeItem.h  NodeScene.h  NoiseGenerationNode.h  OutputNode.h  ThresholdNode.h
src/: BlendNode.cpp  BlurNode.cpp  BrightnessContrastNode.cpp  ColorChannelSplitter.cpp  ConnectionItem.cpp  ConvolutionFilterNode.cpp  EdgeDetectionNode.cpp  ImageInputNode.cpp  MainWindow.cpp  NodeGraph.cpp  NodeItem.cpp  NodeScene.cpp  NoiseGenerationNode.cpp  OutputNode.cpp  ThresholdNode.cpp  main.cpp
